update ownerOrTitle param
