# docs/swagger.json
@@ -36,6 +36,19 @@
                         "description": "Размер страницы",
                         "name": "pageSize",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "default": "PENDING",
+                        "description": "Статус доставки",
+                        "name": "deliveryStatus",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Отправитель или Название",
+                        "name": "ownerOrTitle",
+                        "in": "query"
                     }
                 ],
                 "responses": {
