# internal/http/handler/document.go
@@ -19,6 +19,7 @@ import (
 // @Param page query int false "Номер страницы" default(1)
 // @Param pageSize query int false "Размер страницы" default(10)
 // @Param deliveryStatus query string false "Статус доставки" default(PENDING)
+// @Param ownerOrTitle query string false "Отправитель или Название"
 // @Success 200 {array} model.GetDocuments "Успешный ответ"
 // @Failure 500 {object} model.ErrorResponse "Внутренняя ошибка сервера"
 // @Router /document/formed [get]
@@ -27,8 +28,9 @@ func (h *Handler) GetFormedDocuments(c *gin.Context) {
     page, _ := strconv.Atoi(c.Query("page"))
     pageSize, _ := strconv.Atoi(c.Query("pageSize"))
 	deliveryStatus := model.DeliveryStatus(c.Query("deliveryStatus"))
+	ownerOrTitle := c.Query("ownerOrTitle")
     // Получаем сформированные документы
-    documents, total, err := h.r.GetFormedDocuments(page, pageSize, deliveryStatus)
+    documents, total, err := h.r.GetFormedDocuments(page, pageSize, deliveryStatus, ownerOrTitle)
     if err != nil {
         c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to retrieve documents: " + err.Error()})
         return
@@ -37,7 +39,6 @@ func (h *Handler) GetFormedDocuments(c *gin.Context) {
     c.JSON(http.StatusOK, gin.H{"items":documents,
 								"total": total})
 }
-
 // GetDocumentByID получает документ по его ID.
 // @Summary Получает документ по ID.
 // @Description Получает документ из репозитория по указанному ID.
